--- a/VirtualPet/VirtualPet.csproj
+++ b/VirtualPet/VirtualPet.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Collisions.cs" />
     <Compile Include="DialogControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
