--- a/VirtualPet.Core/VirtualPet.Core.csproj
+++ b/VirtualPet.Core/VirtualPet.Core.csproj
@@ -5,4 +5,8 @@
     <UseWindowsForms>true</UseWindowsForms>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
+
 </Project>
