--- a/VirtualPet.Core/VirtualPet.Core.csproj
+++ b/VirtualPet.Core/VirtualPet.Core.csproj
@@ -9,4 +9,8 @@
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\VirtualPet.Physics\VirtualPet.Physics.csproj" />
+  </ItemGroup>
+
 </Project>
